--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,8 @@ body {
 .container {
     color:#edf6f9;
     background-color: #8d99ae;
+    box-shadow: 0px 0px 6px 0px #000000;    
+
     height: 100vh;
     width: 70vw;
     margin: 20px auto;
@@ -40,9 +42,14 @@ header h2 {
     padding: .625rem;
     background: none;
     border: none;
-    border-bottom: 2px solid #edf6f9;   
+    border-bottom: 2px solid #edf6f9;  
+    transition: .3s all; 
 }
+.formulario input:focus {
+    border-bottom: 2px solid #118ab2;   
+    outline: none;
 
+}
 .formulario input::placeholder{
     color: #edf6f9;
 }
@@ -78,11 +85,22 @@ header h2 {
 
 .contacto {
     display: flex;
-    flex-direction:row;
-    justify-content: space-around;
-    text-align: center;
+    text-align: left;
     align-items: center;
     height: 4rem;
+    overflow: hidden;
+}
+
+.contacto h3,
+.contacto p {
+    margin: auto;
+    overflow: hidden; 
+}
+
+
+.contacto i {
+    position: relative;
+    left: -30px;
 }
 
 .btn-borrar {
@@ -103,4 +121,27 @@ header h2 {
 
 .btn-borrar:active {
     top: 2px;
+}
+
+@media screen and (max-width: 48rem) {
+    
+    /* body {
+        background-color: #8d99ae;   
+    } */
+    .container {
+        width: 100vw;
+    }
+}
+
+@media screen and (max-width: 27.1875rem) {
+    body {
+        background-color: #8d99ae;   
+    }
+    .formulario input {
+        width: 100%;
+    }
+    .btn-agregar {
+        display: inline-block;
+        width: 70%;
+    }
 }
