--- a/style/style.css
+++ b/style/style.css
@@ -6,16 +6,16 @@
 }
 
 body {
-    background-color: #edf6f9;
+    background-color: #949494 ;
     
 }
 
 .container {
     color:#edf6f9;
-    background-color: #8d99ae;
+    background-color: #5f5f5f;
     box-shadow: 0px 0px 6px 0px #000000;    
 
-    height: 100vh;
+    /* height: 100vh; */
     width: 70vw;
     margin: 20px auto;
     text-align: center;
@@ -35,7 +35,7 @@ header h2 {
     padding: .3125rem;
 }
 
-.formulario input {
+.formulario input{
     display: block;
     width: 70%;
     margin: .625rem auto;
@@ -43,16 +43,17 @@ header h2 {
     background: none;
     border: none;
     border-bottom: 2px solid #edf6f9;  
-    transition: .3s all; 
 }
-.formulario input:focus {
+.formulario input:focus{
     border-bottom: 2px solid #118ab2;   
     outline: none;
+    transition: .3s all;
+}
 
-}
 .formulario input::placeholder{
-    color: #edf6f9;
+    color: #d5d5d5;
 }
+
 
 .btn-agregar {
     display: inline-block;
@@ -77,38 +78,55 @@ header h2 {
     box-shadow: 6px 5px 12px -5px rgba(0,0,0,0.6) inset;
 }
 
+.contacto-container {
+    padding: 10px;
+}
+
+.contacto-container .titulo {
+    text-align: left;
+    margin-bottom: 20px;
+}
 
 .listado {
-    display: flex;
-    flex-direction:column;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+    grid-gap: 20px;
 }
-
 .contacto {
-    display: flex;
+    /* border: 1px solid #fff; */
+    background-color: #eee;
+    color: #04080a ;
+    border-radius: 5px;
+    display: grid;
+    grid-template-rows: max-content 60px 1fr;
+    padding: 10px;
     text-align: left;
-    align-items: center;
-    height: 4rem;
-    overflow: hidden;
 }
+.contacto h3 {
+    color: #118ab2 ;
 
+}
 .contacto h3,
 .contacto p {
     margin: auto;
-    overflow: hidden; 
+    overflow: hidden;
 }
 
 
 .contacto i {
     position: relative;
-    left: -30px;
+    margin: auto;
+    margin-top: 20px;
+    font-size: 1.3rem;
 }
 
 .btn-borrar {
     display: inline-block;
+    position: relative;
     background: none;
     border: none;
     font-size: 1em;
-    color: #660708;
+    color: #ff5252;
     position: relative;
     cursor: pointer;
     transition: all .3s;
@@ -116,18 +134,18 @@ header h2 {
 
 .btn-borrar:hover {
     color: #d90429;
-    font-size: 1.3em;
 }
 
 .btn-borrar:active {
     top: 2px;
 }
 
+.error::placeholder {
+    color: #ff5252 !important;
+}
+
+/* mediaqueries */
 @media screen and (max-width: 48rem) {
-    
-    /* body {
-        background-color: #8d99ae;   
-    } */
     .container {
         width: 100vw;
     }
@@ -140,6 +158,13 @@ header h2 {
     .formulario input {
         width: 100%;
     }
+
+    .contacto {
+        /* display: flex; */
+        text-align: center;
+        flex-direction: column;
+    }
+
     .btn-agregar {
         display: inline-block;
         width: 70%;
